Fix page-header-links outline color contrast (#5096)

--- a/src/pretix/static/pretixpresale/scss/_theme.scss
+++ b/src/pretix/static/pretixpresale/scss/_theme.scss
@@ -43,8 +43,9 @@ h3, .h3 {
 .page-header-links > div.header-part {
   padding-top: 15px;
 
-  a:link, a:visited {
+  a {
     color: var(--pretix-link-contrast-color);
+    outline-color: inherit;
   }
   a:active, a:hover, a:focus {
     color: var(--pretix-link-hover-contrast-color);
